--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <h1>Test Head</h1>
     <script src="js/scripts.js"></script>
 </body>
 </html>
