--- a/index.html
+++ b/index.html
@@ -55,6 +55,27 @@
             </div>
         </nav>
     </section>
+    <section>
+        <div class="container" style="padding-top: 80px;padding-bottom: 80px;">
+            <div class="row text-start">
+                <div class="col-md-6 col-lg-6 col-12">
+                    <div>
+                        <p style="color: rgb(202, 199, 199);">Lorem ipsum dolor sit.</p>
+                        <h1>Best Care &
+                            Better Doctor
+                        </h1>
+                        <p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse nostrum dicta
+                            eaque, porro quidem temporibus! Vero autem at velit asperiores unde quo quae laborum. Saepe!
+                        </p>
+                        <button class="btn btn-primary mt-4">Book an appointment</button>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-6 col-12 text-end">
+                    <img style="height: 22rem;" class="img-fluid" src="images/header-img.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
@@ -98,8 +119,7 @@
                     <div class="col-xl-4 col-lg-4 mb-50">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="index.html"><img src="images/logo.png" class="img-fluid"
-                                        alt="logo"></a>
+                                <a href="index.html"><img src="images/logo.png" class="img-fluid" alt="logo"></a>
                             </div>
                             <div class="footer-text">
                                 <p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit, sed do eiusmod tempor
@@ -125,7 +145,7 @@
                                 <li><a href="#">services</a></li>
                                 <li><a href="#">portfolio</a></li>
                                 <li><a href="#">Contact</a></li>
-                                
+
                             </ul>
                         </div>
                     </div>
