update counter section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <link rel="shortcut icon" href="images/logo-icon.png" type="image/png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>LifeCare</title>
+     <!-- jQuery Library -->
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+     <!-- Counts JS -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
+
 </head>
 
 <body>
@@ -76,6 +83,43 @@
             </div>
         </div>
     </section>
+
+    <section id="counting" class="counts-section py-5" style="background-color: #f8fbfe;">
+          <div class="container ">
+            <div class="row ">
+                <div class="col-lg-3 col-md-6 col-sm-6 text-center py-4">
+                    <div >
+                        <i class="fa counter-icon fa-plus"></i>
+                        <h1><span class="counter counter-main-text">20</span></h1>
+                        <h2 class="counter-sub-main-text">Years of Experience</h2>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 text-center py-4">
+                    <div >
+                        <i class="fa counter-icon fa-heart" ></i>
+                        <h1><span class="counter counter-main-text">700</span></h1>
+                        <h2 class="counter-sub-main-text">Happy Patients</h2>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 text-center py-4">
+                    <div>
+                        <i class="fa counter-icon fa-book" ></i>
+                        <h1><span class="counter counter-main-text">95</span></h1>
+                        <h2 class="counter-sub-main-text">Certificates</h2>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 text-center py-4">
+                    <div>
+                        <i class="fa counter-icon fa-star" ></i>
+                        <h1><span class="counter counter-main-text">120</span></h1>
+                        <h2 class="counter-sub-main-text">Doctors</h2>
+                    </div>
+                </div>
+
+            </div>
+    </section>
+
+    
 
 
 
@@ -197,7 +241,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
         crossorigin="anonymous"></script>
-    <script src="scripts.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
