--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6 text-center py-4">
                     <div >
                         <i class="fa counter-icon fa-heart" ></i>
-                        <h1><span class="counter counter-main-text">700</span></h1>
+                        <h1><span class="counter counter-main-text">700</span>+</h1>
                         <h2 class="counter-sub-main-text">Happy Patients</h2>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6 text-center py-4">
                     <div>
                         <i class="fa counter-icon fa-star" ></i>
-                        <h1><span class="counter counter-main-text">120</span></h1>
+                        <h1><span class="counter counter-main-text">120</span>+</h1>
                         <h2 class="counter-sub-main-text">Doctors</h2>
                     </div>
                 </div>
