--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     counselling chat
     human map -->
     <section>
+        <div style="background-color: #1a99dd;">
+            <div class="container py-1 text-white text-center"><marquee behavior="" direction="left"><i class="fa fa-bell"></i> COVID-19 resources and online COVID-19 vaccine scheduling.</marquee></div>
+        </div>
         <nav class="navbar navbar-expand-lg navbar-light py-3">
             <div class="container">
                 <a class="navbar-brand" href="#"><img src="images/logo.png" class="img-fluid nav-logo" alt=""></a>
