--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     counselling chat
     human map -->
     <section>
+        <div style="background-color: #1a99dd;">
+            <div class="container py-1 text-white text-center"><marquee behavior="" direction="left"><i class="fa fa-bell"></i> COVID-19 resources and online COVID-19 vaccine scheduling.</marquee></div>
+        </div>
         <nav class="navbar navbar-expand-lg navbar-light py-3">
             <div class="container">
                 <a class="navbar-brand" href="#"><img src="images/logo.png" class="img-fluid nav-logo" alt=""></a>
@@ -95,7 +98,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6 text-center py-4">
                     <div >
                         <i class="fa counter-icon fa-heart" ></i>
-                        <h1><span class="counter counter-main-text">700</span></h1>
+                        <h1><span class="counter counter-main-text">700</span>+</h1>
                         <h2 class="counter-sub-main-text">Happy Patients</h2>
                     </div>
                 </div>
@@ -109,7 +112,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6 text-center py-4">
                     <div>
                         <i class="fa counter-icon fa-star" ></i>
-                        <h1><span class="counter counter-main-text">120</span></h1>
+                        <h1><span class="counter counter-main-text">120</span>+</h1>
                         <h2 class="counter-sub-main-text">Doctors</h2>
                     </div>
                 </div>
