--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link rel="shortcut icon" href="images/logo-icon.png" type="image/png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>LifeCare</title>
-     <!-- jQuery Library -->
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- jQuery Library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-     <!-- Counts JS -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
+    <!-- Counts JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
 
 </head>
 
@@ -32,7 +32,10 @@
     human map -->
     <section>
         <div style="background-color: #1a99dd;">
-            <div class="container py-1 text-white text-center"><marquee behavior="" direction="left"><i class="fa fa-bell"></i> COVID-19 resources and online COVID-19 vaccine scheduling.</marquee></div>
+            <div class="container py-1 text-white text-center">
+                <marquee behavior="" direction="left"><i class="fa fa-bell"></i> COVID-19 resources and online COVID-19
+                    vaccine scheduling.</marquee>
+            </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light py-3">
             <div class="container">
@@ -86,32 +89,32 @@
     </section>
 
     <section id="counting" class="counts-section py-5" style="background-color: #f8fbfe;">
-          <div class="container ">
+        <div class="container ">
             <div class="row ">
                 <div class="col-lg-3 col-md-6 col-sm-6 text-center py-4">
-                    <div >
+                    <div>
                         <i class="fa counter-icon fa-plus"></i>
                         <h1><span class="counter counter-main-text">20</span></h1>
                         <h2 class="counter-sub-main-text">Years of Experience</h2>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 text-center py-4">
-                    <div >
-                        <i class="fa counter-icon fa-heart" ></i>
+                    <div>
+                        <i class="fa counter-icon fa-heart"></i>
                         <h1><span class="counter counter-main-text">700</span>+</h1>
                         <h2 class="counter-sub-main-text">Happy Patients</h2>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 text-center py-4">
                     <div>
-                        <i class="fa counter-icon fa-book" ></i>
+                        <i class="fa counter-icon fa-book"></i>
                         <h1><span class="counter counter-main-text">95</span></h1>
                         <h2 class="counter-sub-main-text">Certificates</h2>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 text-center py-4">
                     <div>
-                        <i class="fa counter-icon fa-star" ></i>
+                        <i class="fa counter-icon fa-star"></i>
                         <h1><span class="counter counter-main-text">120</span>+</h1>
                         <h2 class="counter-sub-main-text">Doctors</h2>
                     </div>
@@ -120,7 +123,74 @@
             </div>
     </section>
 
-    
+
+    <section id="team">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-3 col-md-3 col-sm-6 text-center"
+                    style="padding: 0 !important; display:flex;justify-content:center;align-items:center">
+                    <div>
+                        <h5 class="doctor-name">Julian Sims</h5>
+                        <p class="text-muted doctor-passion">Cardiology</p>
+                        <button type="button" style="border-radius: 50%; " class="btn btn-primary plus-button">
+                            <i class="fa fa-plus plus-icon"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6" style="padding: 0 !important">
+                    <img class="doctor-image" style="width:100%;height:20rem;" src="images/team-img-1.jpg" alt="">
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 text-center"
+                    style="padding: 0 !important; display:flex;justify-content:center;align-items:center">
+                    <div>
+                        <h5 class="doctor-name">Owan Cox</h5>
+                        <p class="text-muted doctor-passion">Physio-therapist</p>
+                        <button type="button" style="border-radius: 50%; " class="btn btn-primary plus-button">
+                            <i class="fa fa-plus plus-icon"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6" style="padding: 0 !important">
+                    <img class="doctor-image" style="width:100%;height:20rem;" src="images/team-img-2.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-3 col-md-3 col-sm-6" style="padding: 0 !important">
+                    <div>
+                        <img class="doctor-image" style="width:100%;height:20rem;" src="images/team-img-3.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 text-center"
+                    style="padding: 0 !important; display:flex;justify-content:center;align-items:center">
+                    <div>
+                        <h5 class="doctor-name">Sam Andrew</h5>
+                        <p class="text-muted doctor-passion">Psychology</p>
+                        <button type="button" style="border-radius: 50%; " class="btn btn-primary plus-button">
+                            <i class="fa fa-plus plus-icon"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6" style="padding: 0 !important">
+                    <img class="doctor-image" style="width:100%;height:20rem;" src="images/team-img-4.jpg" alt="">
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 text-center"
+                    style="padding: 0 !important; display:flex;justify-content:center;align-items:center">
+                    <div>
+                        <h5 class="doctor-name">Kia morgan</h5>
+                        <p class="text-muted doctor-passion">Physiology</p>
+                        <button type="button" style="border-radius: 50%; " class="btn btn-primary plus-button">
+                            <i class="fa fa-plus plus-icon"></i>
+                        </button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+
+
 
 
 
@@ -240,8 +310,8 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
-        crossorigin="anonymous"></script>
+        integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous">
+    </script>
     <script src="js/scripts.js"></script>
 </body>
 
