update sevice section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <!--     doctor-section
+    <!--    
     sidebar
     timetable
     about
@@ -190,6 +190,15 @@
 
     </section>
 
+    <section id="services" style="background-image: url(images/service-image.jpg);">
+        <!-- Blood bank department, respiratory medicine,ophthalmology,ent-surgery ,physiotherapy, laparoscopic surgery, departmentof radiology, gynaecology,  -->
+        <div class="our-services">
+            <h2>Our Services</h2>
+
+        </div>
+
+
+    </section>
 
 
 
