update appointment section

--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
 </head>
 
 <body>
-    <!--    
-    sidebar
-    about
+    <!--    about
     find-a-vaccine
-    appointment
     counselling chat
     human map -->
     <section>
@@ -80,11 +77,28 @@
     </section>
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
         <div class="offcanvas-header">
-            <h5 id="offcanvasRightLabel">Offcanvas right</h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
-            ...
+            <div>
+                <img style="width: 80%;" src="images/logo.png" class="image-fluid" alt="">
+            </div>
+            <p style="font-size: 15px;line-height: 26px;font-weight: 300; margin-top: 16px;color: #5e647a">Nunc interdum sapien ut mauris maxi us consectetur porta nunc. Con vallislo em ipsum dolor sit amet onsec tet.</p>
+            <h3 ><a style="color: #2a2f41; cursor: pointer; font-size: 22px;font-weight: bold" href="tel: +91 7454848545">+91 7454848545</a></h3>
+            <p>Email us: <a href="mailto: lifecare@hospital.com ">lifecare@hospital.com</a></p>
+
+            <div class="mt-2">
+                <h4 style="color:#2a2f41;font-size:20px">Working Hours</h4>
+                <p style="color:#5e647a;font-size:15px">Mon-Fri: 9a.m. to 5p.m.</p>
+                <p style="color:#5e647a;font-size:15px">Sat-Sun: Closed</p>
+                <p style="color:#5e647a;font-size:15px">650 Hungry Bird, <br>near Eiffel Tower, London </p>
+                <p>Follow us: 
+                    <i class="fa ps-2 fa-facebook"></i>
+                    <i class="fa px-2 fa-twitter"></i>
+                    <i class="fa fa-google"></i>
+
+                </p>
+            </div>
         </div>
     </div>
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -294,7 +308,7 @@
                             been avoiding the dentist for years due to bad experiences. A reminder SMS is sent the
                             working day beforehand. I also had a call confirming appointment. I have been a patient ever
                             since. My dentist is very reassuring and
-                            very helpful. Excellent treatment and advice.”</p>
+                            very helpful. Excellent treatment and advice.</p>
                         <h5>Anton Stanko</h5>
                         <p class="text-muted" style="font-size: 14px;">Dental Patient</p>
                     </div>
@@ -312,7 +326,7 @@
                             been avoiding the dentist for years due to bad experiences. A reminder SMS is sent the
                             working day beforehand. I also had a call confirming appointment. I have been a patient ever
                             since. My dentist is very reassuring and
-                            very helpful. Excellent treatment and advice.”</p>
+                            very helpful. Excellent treatment and advice.</p>
                         <h5>Anton Stanko</h5>
                         <p class="text-muted" style="font-size: 14px;">Dental Patient</p>
                     </div>
@@ -330,7 +344,7 @@
                             been avoiding the dentist for years due to bad experiences. A reminder SMS is sent the
                             working day beforehand. I also had a call confirming appointment. I have been a patient ever
                             since. My dentist is very reassuring and
-                            very helpful. Excellent treatment and advice.”</p>
+                            very helpful. Excellent treatment and advice.</p>
                         <h5>Sangeeta Stankovic</h5>
                         <p class="text-muted" style="font-size: 14px;">Regular Patient</p>
                     </div>
@@ -348,7 +362,7 @@
                             been avoiding the dentist for years due to bad experiences. A reminder SMS is sent the
                             working day beforehand. I also had a call confirming appointment. I have been a patient ever
                             since. My dentist is very reassuring and
-                            very helpful. Excellent treatment and advice.”</p>
+                            very helpful. Excellent treatment and advice.</p>
                         <h5>Novak Stanlee</h5>
                         <p class="text-muted" style="font-size: 14px;">Regular Patient</p>
                     </div>
@@ -359,6 +373,64 @@
             </div>
         </div>
 
+    </section>
+
+    <section id="Book-appointment">
+        <div class="our-services container py-5">
+            <h2 style="margin:0 !important;font-weight: bold;"  >Book an Appointment</h2>
+            <div class="row pt-5">
+                <div class="col-lg-4 col-md-4 col-12">
+                    <div class="card mt-3 h-100" style="">
+                        <div class="card-body">
+                            <div class="mb-4" style="display: flex;justify-content:center;flex-direction:row">
+                                <img style="width: 12rem; height:12rem;" src="images/slot1.svg" alt="">
+                            </div>
+                            <div class="text-center">
+                                <h3>Find your Doctor</h3>
+                            <p>For all kind of diseases, our specialists are available.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-12">
+                    <div class="card mt-3 h-100" style="">
+                        <div class="card-body">
+                            <div class="mb-4" style="display: flex;justify-content:center;flex-direction:row">
+                                <img style="width: 12rem; height:12rem;" src="images/slot2.svg" alt="">
+                            </div>
+                            <div class="text-center">
+                                <h3>Check timings</h3>
+                                <p>See Timetable for doctors availability.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-12">
+                    <div class="card mt-3 h-100" style="">
+                        <div class="card-body">
+                            <div class="mb-4" style="display: flex;justify-content:center;flex-direction:row">
+                                <img style="width: 12rem; height:12rem;" src="images/slot3.svg" alt="">
+                            </div>
+                            <div class="text-center">
+                                <h3>Confirm your slot</h3>
+                            <p>Book your slot for appointment.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <section id="vaccine" style="background-color: #f8fbfe;">
+        <div class="container pt-3">
+            <h2 style="margin:0 !important;font-weight: bold;" class="text-center">Check your nearest vaccination center and slot availability</h2>
+
+
+        </div>
     </section>
 
     <footer class="footer-section">
