--- a/index.html
+++ b/index.html
@@ -261,6 +261,71 @@
 
     </section>
 
+
+    <section id="heath-tips" style="background-color: #f8fbfe" class="my-2">
+        <div class="container pt-4">
+            <h3 class="text-center pb-2" style="color: #1a99dd">HEALTH TIPS</h3>
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-12">
+                    <div class="text-center pt-5" style="display: flex;flex-direction: row">
+                        <div>
+                            <h4>Eat Healthy</h4>
+                            <p class="text-muted">If you eat healthy u will feel healthy.</p>
+                        </div>
+                        <i style="font-size: 1.5rem" class="health-icon health-icon1 bi bi-arrow-up-right ps-3"></i>
+                    </div>
+                    <div class="text-center pt-5" style="display: flex;flex-direction: row">
+                        <div>
+                            <h4>Eat Healthy</h4>
+                            <p class="text-muted">If you eat healthy u will feel healthy.</p>
+                        </div>
+                        <i style="font-size: 1.5rem" class="health-icon health-icon2 bi bi-arrow-right ps-3"></i>
+                    </div>
+                    <div class="text-center pt-5" style="display: flex;flex-direction: row">
+                        <div>
+                            <h4>Eat Healthy</h4>
+                            <p class="text-muted">If you eat healthy u will feel healthy.</p>
+                        </div>
+                        <i style="font-size: 1.5rem" class="health-icon health-icon3 bi bi-arrow-down-right ps-3"></i>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-12">
+                    <div>
+                        <figure class="swing">
+                            <img class="doctor-img" style="width:100%;height:100%;" src="images/doctor.png" alt="">
+                        </figure>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-12">
+                    <div class="text-center pt-5" style="display: flex;flex-direction: row">
+                        <i style="font-size: 1.5rem" class="health-icon health-icon4 bi bi-arrow-up-left ps-3"></i>
+                        <div>
+                            <h4>Eat Healthy</h4>
+                            <p class="text-muted">If you eat healthy u will feel healthy.</p>
+                        </div>
+                    </div>
+                    <div class="text-center pt-5" style="display: flex;flex-direction: row">
+                        <i style="font-size: 1.5rem" class="health-icon health-icon5 bi bi-arrow-left ps-3"></i>
+                        <div>
+                            <h4>Eat Healthy</h4>
+                            <p class="text-muted">If you eat healthy u will feel healthy.</p>
+                        </div>
+                        
+                    </div>
+                    <div class="text-center pt-5" style="display: flex;flex-direction: row">
+                        <i style="font-size: 1.5rem" class="health-icon health-icon6 bi bi-arrow-down-left ps-3"></i>
+                        <div>
+                            <h4>Eat Healthy</h4>
+                            <p class="text-muted">If you eat healthy u will feel healthy.</p>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <section id="services"
         style="background-image: url(images/service-back.png);background-repeat: no-repeat;background-size: cover;background-attachment: fixed;">
         <!-- Blood bank department, ,ophthalmology,ent-surgery ,, y,  ,  -->
