--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <div class="col-lg-4 col-md-4 col-12">
                     <div>
                         <figure class="swing">
-                            <img class="doctor-img" style="width:100%;height:100%;" src="images/doctor.png" alt="">
+                            <img class="doctor-img" style="width:100%;height:100%;" src="https://www.socialworker.com/downloads/2087/download/staysafeandhealthy.jpg?cb=471c3a03990cb2a4db12c5fd9baf2445" alt="">
                         </figure>
                     </div>
                 </div>
