--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 
         </div>
     </section>
-    <section id="skelton">
+    <!-- <section id="skelton">
         <div class="container py-5">
             <h2 style="margin:0 !important;font-weight: bold;">Human Skelton</h2>
             <p class="text-muted">Hover over different bones to know more.</p>
@@ -748,7 +748,11 @@
                     coords="499,699,506,697,507,701,506,703,508,706,500,707,500,704" />
             </map>
         </div>
-    </section>
+    </section> -->
+
+
+
+
 
     <footer class="footer-section">
         <div class="container">
@@ -866,7 +870,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous">
         </script>
-
     <script src="js/scripts.js"></script>
     <script src="owl-carousel/dist/owl.carousel.min.js"></script>
     
