update pricing section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="owl-carousel/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="owl-carousel/dist/assets/owl.theme.default.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!-- jQuery Library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -949,6 +951,83 @@
 
         <!-- <button type="button" class="btn cancel" onclick="closeForm()">Close</button> -->
     </div>
+    
+    <section id="pricing" style="background-color: #f8f9fa;">
+        <div class="container py-5">
+            <div class="about-heading text-center" style="padding-bottom: 30px;">
+                <h2 class="abouth2 ">PRICING</h2>
+                <p class="aboutp text-center">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
+                    aliquid fuga eum
+                    quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit
+                    alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.
+                </p>
+                <div class="row py-3">
+                    <div class="col-lg-4 mt-3">
+                        <div class="price-box  py-5" data-aos="fade-down"
+                            style="background-color: #fff;border-radius: 2%;">
+                            <h3>Free</h3>
+                            <h4><sup>$</sup>0<span> / month</span></h4>
+                            <ul>
+                                <li>Aida dere</li>
+                                <li>Nec feugiat nisl</li>
+                                <li>Nulla at volutpat dola</li>
+                                <li class="na">Pharetra massa</li>
+                                <li class="na">Massa ultricies mi</li>
+                            </ul>
+                            <div class="my-button">
+                                <button type="button"
+                                    style="border-color: #2487ce; color:#2487ce;border-width: 2px;font-weight: bold;"
+                                    class="btn btn-white px-4 buy-button">Buy Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mt-3">
+                        <div class="price-box-2 py-5" data-aos="fade-up" style="background-color:
+                            #2487ce;border-radius: 2%;">
+                            <h3>BUSINESS</h3>
+                            <h4><sup>$</sup>19<span> / month</span></h4>
+                            <ul>
+                                <li>Aida dere</li>
+                                <li>Nec feugiat nisl</li>
+                                <li>Nulla at volutpat dola</li>
+                                <li>Pharetra massa</li>
+                                <li class="na">Massa ultricies mi</li>
+                            </ul>
+                            <div class="my-button">
+                                <button type="button"
+                                    style="border-color: #fff; color:#fff;border-width: 2px;font-weight: bold;"
+                                    class="btn btn-white buy-button-2 px-4">Buy Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mt-3">
+                        <div class="price-box py-5" data-aos="fade-right"
+                            style="background-color: #fff;border-radius: 2%;">
+                            <h3>DEVELOPER</h3>
+                            <h4><sup>$</sup>29<span> / month</span></h4>
+                            <ul>
+                                <li>Aida dere</li>
+                                <li>Nec feugiat nisl</li>
+                                <li>Nulla at volutpat dola</li>
+                                <li>Pharetra massa</li>
+                                <li>Massa ultricies mi</li>
+                            </ul>
+                            <div class="my-button">
+                                <button type="button"
+                                    style="border-color: #2487ce; color:#2487ce;border-width: 2px;font-weight: bold;"
+                                    class="btn btn-white buy-button px-4">Buy Now</button>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                </div>
+
+            </div>
+
+    </section>
+    
     <footer class="footer-section">
         <div class="container">
             <div class="footer-cta pt-5 pb-5">
@@ -1067,6 +1146,7 @@
     </script>
     <script src="js/scripts.js"></script>
     <script src="owl-carousel/dist/owl.carousel.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <!-- <script src="js/jquery.js" ></script> -->
 </body>
