--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
     <section id="about-us">
         <div class="container-fluid pt-5">
             <div>
-                <h2 class="text-center">ABOUT US</h2>
+                <h2 class="text-center" style="font-weight: bold;color:#1a99dd">ABOUT US</h2>
+                <p class="text-muted text-center">You get better because we are better.Premium Care. Personal Touch.</p>
             </div>
             <div class="row py-4">
                 <div class="col-lg-6 col-md-6 col-sm-6 text-center">
@@ -254,7 +255,7 @@
     <section id="team">
         <div class="container-fluid pt-5">
             <div>
-                <h2 class="text-center">OUR DOCTORS</h2>
+                <h2 class="text-center" style="font-weight: bold;color:#1a99dd">OUR DOCTORS</h2>
                 <p class="text-muted text-center">Our administration and support staff all have exceptional people
                     skills and trained to assist you with all medical enquiries.</p>
             </div>
@@ -324,8 +325,8 @@
 
     <section id="news" style="background-color: #f8fbfe;">
         <div class="container pt-5">
-            <div>
-                <h2 class="text-center">NEWS</h2>
+            <div class="pb-3">
+                <h2 class="text-center" style="font-weight: bold;">NEWS</h2>
                 <div class="line"></div>
             </div>
 
@@ -585,7 +586,8 @@
 
     <section id="book-appointment">
         <div class="our-services container py-5">
-            <h2 style="margin:0 !important;font-weight: bold;">Book an Appointment</h2>
+            <h2 class="text-center pb-2" style="margin:0 !important;font-weight: bold;">Book an Appointment</h2>
+            <div class="line"></div>
             <div class="row pt-5">
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card h-100 book-card" style="border-radius: 13px;">
@@ -1022,7 +1024,8 @@
     <section id="pricing" style="background-color: #f8fbfe;">
         <div class="container py-5">
             <div class="about-heading text-center" style="padding-bottom: 30px;">
-                <h2 class="abouth2 ">PRICING</h2>
+                <h2 class="abouth2 " style="font-weight: bold">PRICING</h2>
+                <div class="line"></div>
 
                 <div class="row py-3">
                     <div class="col-lg-4 mt-3">
@@ -1095,7 +1098,8 @@
     <section id="branch" style="background-color: #fff;">
         <div class="container py-5">
             <div class="about-heading text-center" style="padding-bottom: 30px;">
-                <h2 class="abouth2 ">OUR BRANCHES</h2>
+                <h2 class="abouth2" style="font-weight: bold;color:#1a99dd">OUR BRANCHES</h2>
+                <p class="text-muted text-center">We are spread across worldwide for you.You can come to nearest branch.</p>
             </div>
             <div>
                 <iframe style="width: 100%;height: 25rem"
