update our partners section

--- a/index.html
+++ b/index.html
@@ -706,6 +706,49 @@
 
         </div>
     </section> -->
+
+
+    <section id="logos" style="background-color: #f8fbfe">
+        <div class="container pt-3">
+            <h2 class="text-center" style="margin:0 !important;font-weight: bold;color: #1a99dd;">OUR PARTNERS</h2>
+            <p class="text-center text-muted">These are some medical services which comes under our LifeCare.</p>
+            <div class="row py-3 px-2">
+                <div class="col-lg-2 col-md-4 col-sm-6">
+                    <div class="my-logo my-3">
+                        <img class="my-logo-image" src="images/logo1.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-4 col-sm-6">
+                    <div class="my-logo my-3">
+                        <img class="my-logo-image" src="images/logo2.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-4 col-sm-6">
+                    <div class="my-logo my-3">
+                        <img class="my-logo-image" src="images/logo3.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-4 col-sm-6">
+                    <div class="my-logo my-3">
+                        <img class="my-logo-image" src="images/logo4.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-4 col-sm-6">
+                    <div class="my-logo my-3">
+                        <img class="my-logo-image" src="images/logo5.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-4 col-sm-6">
+                    <div class="my-logo my-3">
+                        <img class="my-logo-image" src="images/logo6.png" alt="">
+                    </div>
+                </div>
+
+            </div>
+    </section>
+
+
+
     <section style="background-color: #1a99dd;">
         <div class="container py-5">
             <h2 class="text-center" style="margin:0 !important;font-weight: bold;color: white;">Patient Care Locations Across India</h2>
@@ -982,8 +1025,8 @@
 
     <button class="open-button" onclick="openForm()"><i class="bi bi-chat-dots-fill fa-2x"></i></button>
     <div class="chat-popup" id="myForm">
-        <h4 class="p-2" style="background-color: #1a99dd;color: white;font-size: 1.1rem !important;">Request a callback
-        </h4>
+        <div><h4 class="p-2" style="background-color: #1a99dd;color: white;font-size: 1.1rem !important;">Request a callback
+        </h4></div>
         <div class="container">
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
@@ -1012,7 +1055,7 @@
                 <input type="email" class="form-control" id="floatingInput" placeholder="Enter Phone">
                 <label for="floatingInput">Enter Phone Number</label>
             </div>
-            <div class="mb-5">
+            <div class="pb-5">
                 <button class="btn btn-primary">Submit Request</button>
                 <button type="button" class="btn btn-danger" onclick="closeForm()">Close</button>
             </div>
