--- a/index.html
+++ b/index.html
@@ -157,8 +157,10 @@
             <div class="row text-start">
                 <div class="col-md-6 col-lg-6 col-12" style="display: flex; align-items: center;">
                     <div>
-                        <p class="" style="color: rgb(202, 199, 199);">Total Health Care Solution.</p>
-                        <h1>Best Care &
+                        <div class="typewriter">
+                            <p class="" style="color: rgb(202, 199, 199);">Total Health Care Solution. Healthy doesn't mean expensive.</p>
+                        </div>
+                        <h1 class="pt-2">Best Care &
                             Better Doctor
                         </h1>
                         <p class="mt-3">The health and well-being of our patients and their health care team will
